# observability-Agent

./: .gitignore
backend/observability_refactored/: .env  .env.example  Jenkinsfile  docker-compose.yml  evolution.py  requirements.txt
backend/observability_refactored/api/: database.py  helpers.py  routes.py
backend/observability_refactored/dbschemachanges/: schema.sql
backend/observability_refactored/deployments/: docker-compose.prod.yml  docker-compose.yml
backend/observability_refactored/docs/: api.md  architecture.md  deployment.md
backend/observability_refactored/observability_redis_api/: Dockerfile
backend/observability_refactored/observability_redis_worker/: Dockerfile  main.py  pyproject.toml
backend/observability_refactored/observability_sdk/: README.md  __init__.py
backend/observability_refactored/shared/: pyproject.toml
backend/observability_refactored/shared/shared/: __init__.py  check_dlq.py  retry_dlq.py
backend/observability_refactored/shared/shared/constants/: redis_keys.py
backend/observability_refactored/shared/shared/core/: __init__.py  cost_calculator.py  database.py  redis_client.py  serializer.py
backend/observability_refactored/shared/shared/models/: event_models.py  telemetry.py
backend/observability_refactored/shared/shared/schemas/: event_schemas.py
backend/observability_refactored/shared/shared/utils/: serializer.py
backend/observability_refactored/static/: index.html
obserbulity-Uinew/: .env  index.html  package-lock.json  package.json  vite.config.ts
obserbulity-Uinew/src/: App.tsx  index.css
(+100 files in other folders)
